<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/add_meeting_layout"
        android:background="#faf7ed"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/add_avatar"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginStart="6dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="@string/avatar"
                    app:srcCompat="@drawable/ic_baseline_account_circle_24"
                    android:layout_marginLeft="6dp"
                    android:layout_marginRight="10dp"
                    tools:ignore="VectorDrawableCompat" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/Subject"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginEnd="20dp"
                        android:ems="10"
                        android:hint="Enter a subject"
                        android:inputType="textPersonName"
                        android:maxLength="15"
                        android:textSize="24sp"
                        android:textColor="#020000"
                        android:layout_marginRight="20dp" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/add_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="50dp"
                android:clickable="true"
                android:drawableStart="@drawable/ic_baseline_calendar_today_24"
                android:drawableLeft="@drawable/ic_baseline_calendar_today_24"
                android:drawablePadding="10dp"
                android:focusable="true"
                android:hint="Enter a date"
                android:textColor="#020000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/add_room"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="20dp"
                android:clickable="true"
                android:drawableStart="@drawable/ic_baseline_room_24"
                android:drawableLeft="@drawable/ic_baseline_room_24"
                android:drawablePadding="10dp"
                android:focusable="true"
                android:hint="Select a room"
                android:textColor="#020000"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:layout_marginLeft="15dp">

                <TextView
                    android:id="@+id/add_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:drawableStart="@drawable/ic_baseline_access_time_24"
                    android:drawableLeft="@drawable/ic_baseline_access_time_24"
                    android:drawablePadding="10dp"
                    android:focusable="true"
                    android:hint="Select an hour"
                    android:textColor="#020000"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tiret"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="-"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/add_duration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:alpha="0.4"
                    android:clickable="true"
                    android:drawablePadding="10dp"
                    android:enabled="false"
                    android:focusable="true"
                    android:hint="Enter a duration"
                    android:textColor="#020000"
                    android:textSize="20sp" />
            </LinearLayout>


            <MultiAutoCompleteTextView
                android:id="@+id/add_delegates"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="10dp"
                android:clickable="true"
                android:drawableStart="@drawable/ic_baseline_person_add_24"
                android:drawablePadding="10dp"
                android:ems="10"
                android:focusable="true"
                android:hint="@string/add_delegate"
                android:textSize="18sp"
                android:textColor="#020000"
                android:drawableLeft="@drawable/ic_baseline_person_add_24" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/about_meeting"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/meetingSubject"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="About meeting"
                    android:textSize="20dp"
                    android:textColor="#020000"
                    android:inputType="textMultiLine"
                    android:lines="4"
                    android:minLines="4" />

            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/add_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:backgroundTint="#3F51B5"
                android:enabled="false"
                android:text="create meeting"
                android:textColor="#FFFFFF" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>