<resources>
    <string name="app_name">Mareu</string>
    <string name="Delegate">Delegate@lamzone.com, Delegate@lamzone.com, Delegate@lamzone.com</string>
    <string name="add_a_new_meeting">Add a new meeting</string>
    <string name="type_the_delegate">Type the delegate</string>
    <string name="add_delegate">Add delegate</string>
    <string name="type_the_location">Type the location</string>
    <string name="time">Time</string>
    <string name="type_to_select_the_date">Type to select the date</string>
    <string name="type_the_subject">Type the subject</string>
    <string name="back_button">Back button</string>
    <string name="add">ADD</string>
    <string name="date">Date</string>
    <string name="location">Location</string>
    <string name="todo">TODO</string>
    <string name="todo1">TODO</string>
    <string name="meeting_subject">Meeting Subject</string>
    <string name="meeting_date">Meeting date</string>
    <string name="add_a_meeting_room">Add a meeting room</string>
    <string name="meeting_time">Meeting time</string>
    <string name="add_a_duration">Add a duration</string>
    <string name="about_the_meeting">About the meeting</string>
    <string name="create_meeting">Create meeting</string>
    <string name="meeting_time_place">Meeting time place</string>
    <string name="delete">Delete</string>
    <string name="avatar">Avatar</string>
    <string name="duration_of_the_meeting">Duration of the meeting</string>
    <string name="double_dot">:</string>
    <string name="cancel">Cancel</string>
    <string name="Ok">Ok</string>
    <string name="meeting_room_filter">Meeting room filter</string>
    <string name="meeting_room_available">Meeting room available</string>
    <string name="meeting_in_the_x_room">Meeting in the %s room</string>
    <string name="at_x">At %s</string>
    <string name="meeting_room_unavailable">Room unavailable</string>
    <string name="meeting_from_x_to_x">Meeting from %s to %s</string>
    <string name="no_more_info">No more info</string>
    <string name="unavailable_message">Unavailable message</string>
    <string name="until">Until</string>
    <string name="filter_by_location">Filter by location</string>
    <string name="filter_by_date">Filter by date</string>
    <string name="Clear_filter">Clear filter</string>
    <string name="filter_meetings">Filter meetings</string>
</resources>
