...
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/detail_meeting"
    android:background="#D1D1D1"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".controler.MeetingDetailActivity">


...
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/detail_subject"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#DD000000"
...
